load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
]

cc_library(
    name = "any",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        "@boost//config",
        "@boost//type_traits",
        "@boost//static_assert",
        "@boost//core",
        "@boost//throw_exception",
        "@boost//utility",
        "@boost//type_index",
    ],
)
