load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
]

cc_library(
    name = "any",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        "@boost//libs/config",
        "@boost//libs/type_traits",
        "@boost//libs/static_assert",
        "@boost//libs/core",
        "@boost//libs/throw_exception",
        "@boost//libs/utility",
        "@boost//libs/type_index",
    ],
)
